data/derived/comb/progs/unify/prog5111.ml.out
Characters 105-106:
  | h::t  -> if (k,d) = l then d else assoc (d,k,t);;
                                                 ^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type 'a * 'b
